<resources>
    <string name="app_name">LeTran_CE02</string>
    <string name="contentDescription">Puppy Image</string>
    <string name="section_1">Puppies Have Baby Teeth, Too</string>
    <string name="content_1">Like many newborn mammals, puppies are born completely toothless. At
    2 to 4 weeks of age, a puppys 28 baby teeth will start to come in. Around 12 to 16 weeks old,
    those baby teeth fall out, and by the time pups are 6 months old, they should be sporting a
    set of 42 adult teeth.</string>
    <string name="section_2">Puppies Take a Lot Of Naps</string>
    <string name="content_2">Like children, puppies need a lot of sleep - up to 15 to 20 hours
    of it a day. The American Kennel Club strongly advises dog owners to resist the urge to
        disturb napping puppies, because sleep is critical for a young canines developing brain,
        muscles, and immune system. Puppy owners should also establish a designated sleeping space
        on their pup's behalf so they can snooze undisturbed.</string>
        <string name="section_3">Puppies Evolved to be Blind and Deaf At Birth</string>
    <string name="content_3">Puppies are functionally blind and deaf at birth. On day one,
        their eyes are firmly shut and their ears canals closed. Why? In brief, its part of an
        evolutionary trade-off. Since pregnancy can hurt a carnivores ability to chase down food,
        dogs evolved to have short gestation periods. Brief pregnancies meant that canine mothers
        would not need to take prolonged breaks from hunting. Hoever, because dog embryos spend
        such a short time in the womb (only two months or so), puppies are not born fully
        developed - and neither are their eyes or ears.</string>
</resources>
